# json-validation-example

./: .gitmodules  CMakeLists.txt
data/: v4-example-fail.json  v4-example.json  v4-example.schema
src/: main.cpp
